--- a/index.html
+++ b/index.html
@@ -1400,6 +1400,53 @@
             }
         }
 
+        // Utility: Resize and compress image to fit under 1MB
+        async function resizeAndCompressImage(file, maxSize = 1048487, maxDim = 800) {
+            return new Promise((resolve, reject) => {
+                const img = new Image();
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    img.onload = function() {
+                        let width = img.width;
+                        let height = img.height;
+                        if (width > maxDim || height > maxDim) {
+                            if (width > height) {
+                                height = Math.round(height * (maxDim / width));
+                                width = maxDim;
+                            } else {
+                                width = Math.round(width * (maxDim / height));
+                                height = maxDim;
+                            }
+                        }
+                        const canvas = document.createElement('canvas');
+                        canvas.width = width;
+                        canvas.height = height;
+                        const ctx = canvas.getContext('2d');
+                        ctx.drawImage(img, 0, 0, width, height);
+                        // Try compressing to JPEG, then PNG if needed
+                        let quality = 0.8;
+                        let dataUrl = canvas.toDataURL('image/jpeg', quality);
+                        while (dataUrl.length > maxSize * 1.37 && quality > 0.3) { // base64 is ~1.37x larger
+                            quality -= 0.1;
+                            dataUrl = canvas.toDataURL('image/jpeg', quality);
+                        }
+                        if (dataUrl.length > maxSize * 1.37) {
+                            // Try PNG as fallback
+                            dataUrl = canvas.toDataURL('image/png');
+                        }
+                        if (dataUrl.length > maxSize * 1.37) {
+                            reject('Image is too large even after resizing/compression. Please choose a smaller image.');
+                        } else {
+                            resolve(dataUrl);
+                        }
+                    };
+                    img.onerror = function() { reject('Invalid image file.'); };
+                    img.src = e.target.result;
+                };
+                reader.readAsDataURL(file);
+            });
+        }
+
         function addItem() {
             const name = document.getElementById('item-name').value;
             const barcode = document.getElementById('item-barcode').value;
@@ -1414,13 +1461,19 @@
             const imageFiles = document.getElementById('item-images').files;
             let imageData = [];
             if (imageFiles.length > 0) {
+                let processed = 0;
+                let errored = false;
                 for (let i = 0; i < imageFiles.length; i++) {
-                    const reader = new FileReader();
-                    reader.onload = function(e) {
-                        imageData.push(e.target.result);
-                        saveItem(name, barcode, description, category, quantity, price, location, minStock, imageData);
-                    };
-                    reader.readAsDataURL(imageFiles[i]);
+                    resizeAndCompressImage(imageFiles[i]).then(dataUrl => {
+                        imageData[i] = dataUrl;
+                        processed++;
+                        if (processed === imageFiles.length && !errored) {
+                            saveItem(name, barcode, description, category, quantity, price, location, minStock, imageData);
+                        }
+                    }).catch(err => {
+                        errored = true;
+                        showAlert(err, 'error');
+                    });
                 }
             } else {
                 saveItem(name, barcode, description, category, quantity, price, location, minStock, null);
@@ -1567,19 +1620,31 @@
             const imageFiles = document.getElementById('edit-item-images').files;
             let imageData = [];
             if (imageFiles.length > 0) {
+                let processed = 0;
+                let errored = false;
                 for (let i = 0; i < imageFiles.length; i++) {
-                    const reader = new FileReader();
-                    reader.onload = function(e) {
-                        imageData.push(e.target.result);
-                        saveItem(name, barcode, description, category, quantity, price, location, minStock, imageData);
-                    };
-                    reader.readAsDataURL(imageFiles[i]);
+                    try {
+                        const dataUrl = await resizeAndCompressImage(imageFiles[i]);
+                        imageData[i] = dataUrl;
+                        processed++;
+                    } catch (err) {
+                        errored = true;
+                        showAlert(err, 'error');
+                        break;
+                    }
+                }
+                if (!errored) {
+                    await saveUpdatedItem(id, name, barcode, description, category, quantity, price, location, minStock, imageData, tags);
                 }
             } else {
                 // If no new images, keep the old ones
                 const item = inventory.find(item => item.id === id);
                 imageData = item && item.image ? item.image : null;
+                await saveUpdatedItem(id, name, barcode, description, category, quantity, price, location, minStock, imageData, tags);
             }
+        }
+
+        async function saveUpdatedItem(id, name, barcode, description, category, quantity, price, location, minStock, imageData, tags) {
             try {
                 const itemRef = window.firebase.doc(window.firebase.db, 'inventory', id);
                 await window.firebase.updateDoc(itemRef, {
@@ -1591,7 +1656,8 @@
                     price: price,
                     location: location,
                     minStock: minStock,
-                    image: imageData
+                    image: imageData,
+                    tags: tags
                 });
                 // Update local inventory
                 const itemIndex = inventory.findIndex(item => item.id === id);
@@ -1606,7 +1672,8 @@
                         price,
                         location,
                         minStock,
-                        image: imageData
+                        image: imageData,
+                        tags
                     };
                 }
                 closeEditModal();
