--- a/index.html
+++ b/index.html
@@ -677,6 +677,13 @@
         .image-gallery img { width: 60px; height: 60px; object-fit: cover; border-radius: 8px; border: 2px solid #e9ecef; }
         .tag-chips { display: flex; gap: 6px; flex-wrap: wrap; margin-top: 6px; }
         .tag-chip { background: #667eea; color: #fff; border-radius: 12px; padding: 2px 10px; font-size: 0.9em; }
+        .delete-image-btn {
+            font-size: 1em;
+            line-height: 1;
+            padding: 0;
+            margin: 0;
+            z-index: 2;
+        }
     </style>
 </head>
 <body>
@@ -1458,8 +1465,14 @@
             const minStock = parseInt(document.getElementById('item-min-stock').value) || 5;
 
             // Get image data
-            const imageFiles = document.getElementById('item-images').files;
+            const imageFiles = window.addImageFiles || document.getElementById('item-images').files;
             let imageData = [];
+            const MAX_IMAGES = 3;
+            const MAX_TOTAL_SIZE = 1048487; // 1MB
+            if (imageFiles.length > MAX_IMAGES) {
+                showAlert(`You can only upload up to ${MAX_IMAGES} images per item.`, 'error');
+                return;
+            }
             if (imageFiles.length > 0) {
                 let processed = 0;
                 let errored = false;
@@ -1467,7 +1480,13 @@
                     resizeAndCompressImage(imageFiles[i]).then(dataUrl => {
                         imageData[i] = dataUrl;
                         processed++;
+                        // Check total size after all images processed
                         if (processed === imageFiles.length && !errored) {
+                            const totalSize = imageData.reduce((sum, img) => sum + (img.length || 0), 0);
+                            if (totalSize > MAX_TOTAL_SIZE) {
+                                showAlert('Total image size exceeds 1MB. Please use fewer or smaller images.', 'error');
+                                return;
+                            }
                             saveItem(name, barcode, description, category, quantity, price, location, minStock, imageData);
                         }
                     }).catch(err => {
@@ -1617,8 +1636,14 @@
             const price = parseFloat(document.getElementById('edit-item-price').value) || 0;
             const location = document.getElementById('edit-item-location').value;
             const minStock = parseInt(document.getElementById('edit-item-min-stock').value) || 5;
-            const imageFiles = document.getElementById('edit-item-images').files;
+            const imageFiles = window.editImageFiles || document.getElementById('edit-item-images').files;
             let imageData = [];
+            const MAX_IMAGES = 3;
+            const MAX_TOTAL_SIZE = 1048487; // 1MB
+            if (imageFiles.length > MAX_IMAGES) {
+                showAlert(`You can only upload up to ${MAX_IMAGES} images per item.`, 'error');
+                return;
+            }
             if (imageFiles.length > 0) {
                 let processed = 0;
                 let errored = false;
@@ -1634,6 +1659,11 @@
                     }
                 }
                 if (!errored) {
+                    const totalSize = imageData.reduce((sum, img) => sum + (img.length || 0), 0);
+                    if (totalSize > MAX_TOTAL_SIZE) {
+                        showAlert('Total image size exceeds 1MB. Please use fewer or smaller images.', 'error');
+                        return;
+                    }
                     await saveUpdatedItem(id, name, barcode, description, category, quantity, price, location, minStock, imageData, tags);
                 }
             } else {
@@ -2540,17 +2570,57 @@
         function previewImages(input, mode) {
             const gallery = mode === 'add' ? document.getElementById('add-image-gallery') : document.getElementById('edit-image-gallery');
             gallery.innerHTML = '';
-            if (input.files) {
-                Array.from(input.files).forEach(file => {
-                    const reader = new FileReader();
-                    reader.onload = function(e) {
-                        const img = document.createElement('img');
-                        img.src = e.target.result;
-                        gallery.appendChild(img);
-                    };
-                    reader.readAsDataURL(file);
-                });
+            let files = Array.from(input.files);
+            // Store selected files in a global variable for each mode
+            if (mode === 'add') {
+                window.addImageFiles = files;
+            } else {
+                window.editImageFiles = files;
             }
+            files.forEach((file, idx) => {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    const imgWrapper = document.createElement('div');
+                    imgWrapper.style.position = 'relative';
+                    imgWrapper.style.display = 'inline-block';
+                    const img = document.createElement('img');
+                    img.src = e.target.result;
+                    imgWrapper.appendChild(img);
+                    // Add X button
+                    const xBtn = document.createElement('button');
+                    xBtn.textContent = '✖';
+                    xBtn.className = 'delete-image-btn';
+                    xBtn.style.position = 'absolute';
+                    xBtn.style.top = '0';
+                    xBtn.style.right = '0';
+                    xBtn.style.background = 'rgba(220,53,69,0.8)';
+                    xBtn.style.color = '#fff';
+                    xBtn.style.border = 'none';
+                    xBtn.style.borderRadius = '50%';
+                    xBtn.style.width = '22px';
+                    xBtn.style.height = '22px';
+                    xBtn.style.cursor = 'pointer';
+                    xBtn.onclick = function(ev) {
+                        ev.preventDefault();
+                        // Remove file from array and update input.files
+                        files.splice(idx, 1);
+                        // Update global variable
+                        if (mode === 'add') {
+                            window.addImageFiles = files;
+                        } else {
+                            window.editImageFiles = files;
+                        }
+                        // Create a new FileList
+                        const dataTransfer = new DataTransfer();
+                        files.forEach(f => dataTransfer.items.add(f));
+                        input.files = dataTransfer.files;
+                        previewImages(input, mode);
+                    };
+                    imgWrapper.appendChild(xBtn);
+                    gallery.appendChild(imgWrapper);
+                };
+                reader.readAsDataURL(file);
+            });
         }
 
         // Multi-tag support: parse tags from input, display as chips
