--- a/index.html
+++ b/index.html
@@ -1180,10 +1180,20 @@
             <th>Username</th>
             <th>Email</th>
             <th>Created</th>
+            <th>Last IP</th>
+            <th>Actions</th>
           </tr>
         </thead>
         <tbody id="admin-users-body"></tbody>
       </table>
+    </div>
+    <!-- User Details Modal -->
+    <div id="user-details-modal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeUserDetails()">&times;</span>
+        <h2>User Details</h2>
+        <div id="user-details-content"></div>
+      </div>
     </div>
 
     <script>
@@ -1264,14 +1274,15 @@
                 const email = username + '@farhop-inventory.com';
                 const userCredential = await window.firebase.createUserWithEmailAndPassword(window.firebase.auth, email, password);
                 const user = userCredential.user;
-
+                // Get IP
+                const ip = await getPublicIP();
                 // Store user profile in Firestore (only required fields)
                 const userProfile = {
                     username: username,
                     email: email,
-                    created: new Date().toISOString()
+                    created: new Date().toISOString(),
+                    lastIP: ip
                 };
-
                 await window.firebase.addDoc(window.firebase.collection(window.firebase.db, 'users'), userProfile);
 
                 // Send signup notification email
@@ -1311,6 +1322,9 @@
                     const userData = userDoc.data();
                     isAuthenticated = true;
                     currentUser = userData.username;
+                    // Save IP
+                    const ip = await getPublicIP();
+                    await window.firebase.updateDoc(window.firebase.doc(window.firebase.db, 'users', userDoc.id), { lastIP: ip });
                     // Create session
                     const session = {
                         username: userData.username,
@@ -2509,6 +2523,11 @@
             if (event.target === scannerModal) {
                 closeScannerModal();
             }
+            
+            const userDetailsModal = document.getElementById('user-details-modal');
+            if (event.target === userDetailsModal) {
+                closeUserDetails();
+            }
         }
 
         let categories = ["Electronics", "Clothing", "Books", "Food", "Tools", "Other"];
@@ -2807,6 +2826,11 @@
                 <td>${user.username || ''}</td>
                 <td>${user.email || ''}</td>
                 <td>${user.created ? new Date(user.created).toLocaleString() : ''}</td>
+                <td>${user.lastIP || ''}</td>
+                <td>
+                  <button class="btn btn-warning" onclick="showUserDetails('${doc.id}')">Details</button>
+                  <button class="btn btn-danger" onclick="deleteUser('${doc.id}')">Delete</button>
+                </td>
               `;
               tbody.appendChild(tr);
             });
@@ -2824,6 +2848,62 @@
           }
         }
         // ... existing code ...
+        // Delete user
+        async function deleteUser(userId) {
+          if (!confirm('Are you sure you want to delete this user?')) return;
+          try {
+            await window.firebase.deleteDoc(window.firebase.doc(window.firebase.db, 'users', userId));
+            showAlert('User deleted.', 'success');
+            loadAllUsers();
+          } catch (error) {
+            showAlert('Error deleting user: ' + error.message, 'error');
+          }
+        }
+        // Show user details modal
+        async function showUserDetails(userId) {
+          try {
+            const userDoc = await window.firebase.getDocs(window.firebase.query(window.firebase.collection(window.firebase.db, 'users'), window.firebase.where(window.firebase.doc(window.firebase.db, 'users', userId).id, '==', userId)));
+            let user = null;
+            userDoc.forEach(doc => { user = doc.data(); });
+            if (!user) {
+              document.getElementById('user-details-content').innerHTML = '<p>User not found.</p>';
+            } else {
+              let html = '<ul>';
+              for (const key in user) {
+                html += `<li><strong>${key}:</strong> ${user[key]}</li>`;
+              }
+              html += '</ul>';
+              document.getElementById('user-details-content').innerHTML = html;
+            }
+            document.getElementById('user-details-modal').style.display = 'block';
+          } catch (error) {
+            document.getElementById('user-details-content').innerHTML = '<p>Error loading user details.</p>';
+            document.getElementById('user-details-modal').style.display = 'block';
+          }
+        }
+        function closeUserDetails() {
+          document.getElementById('user-details-modal').style.display = 'none';
+        }
+        // ... existing code ...
+        // Add modal close logic for user details
+        window.onclick = function(event) {
+          // ... existing code ...
+          const userDetailsModal = document.getElementById('user-details-modal');
+          if (event.target === userDetailsModal) {
+            closeUserDetails();
+          }
+        }
+        // ... existing code ...
+        // Utility to get public IP
+        async function getPublicIP() {
+          try {
+            const res = await fetch('https://api.ipify.org?format=json');
+            const data = await res.json();
+            return data.ip;
+          } catch {
+            return 'Unknown';
+          }
+        }
     </script>
 </body>
 </html> 
